--- a/Server/Website/Diplomarbeit/website/templates/changeUserPassword.html
+++ b/Server/Website/Diplomarbeit/website/templates/changeUserPassword.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
-
 {% block title %}Change Username{% endblock %}
-
 {% block content %}
 <style>
+  /* Stildefinitionen für das Icon, das das Passwort verdeckt/zeigt */
   .field-icon {
     float: right;
     margin-left: -25px;
@@ -15,8 +14,12 @@
     cursor: pointer;
   }
 </style>
-  <form method="POST">
+
+<!-- Formular zum Ändern des Passworts -->
+<form method="POST">
     <h3 align="center">Change Password</h3>
+
+    <!-- Eingabefeld für die E-Mail-Adresse -->
     <div class="form-group">
       <label for="firstName">Email</label>
       <div style="font-size: 14px" id="info_text"></div>
@@ -28,6 +31,8 @@
         disabled="true"
       />
     </div>
+
+    <!-- Eingabefeld für das vorherige Passwort -->
     <div class="form-group">
         <label for="password">Previous Password</label>
         <input
@@ -37,8 +42,11 @@
           name="password1"
           placeholder="Old Password"
         />
+        <!-- Schaltfläche zum Ein- und Ausblenden des vorherigen Passworts -->
         <span class="fa fa-fw fa-eye field-icon toggle-password1" onclick="togglePasswordVisibility1()"></span>
-      </div>
+    </div>
+
+    <!-- Eingabefeld für das neue Passwort -->
     <div class="form-group">
       <label for="password">Password</label>
       <input
@@ -48,8 +56,11 @@
         name="password2"
         placeholder="New Password"
       />
+      <!-- Schaltfläche zum Ein- und Ausblenden des neuen Passworts -->
       <span class="fa fa-fw fa-eye field-icon toggle-password2" onclick="togglePasswordVisibility2()"></span>
     </div>
+
+    <!-- Eingabefeld zur Bestätigung des neuen Passworts -->
     <div class="form-group">
       <label for="password2">Password (Confirm)</label>
       <input
@@ -59,58 +70,61 @@
         name="password3"
         placeholder="Confirm new password"
       />
+      <!-- Schaltfläche zum Ein- und Ausblenden der Bestätigung des neuen Passworts -->
       <span class="fa fa-fw fa-eye field-icon toggle-password3" onclick="togglePasswordVisibility3()"></span>
     </div>
     <br />
+
+    <!-- Schaltfläche zum Ändern des Passworts -->
     <button type="submit" class="btn btn-primary">Change</button>  
-  </form>
+</form>
 
-  <script> 
-  
-    function togglePasswordVisibility1() {
-      const passwordInput = document.getElementById('password1'); 
-      const icon = document.querySelector('.toggle-password1');
-  
-      if (passwordInput.type === 'password') { 
-        passwordInput.type = 'text';
-        icon.classList.remove('fa-eye');
-        icon.classList.add('fa-eye-slash');
-      } else {
-        passwordInput.type = 'password';
-        icon.classList.remove('fa-eye-slash');
-        icon.classList.add('fa-eye');
-      }
-    }
-  
-    function togglePasswordVisibility2() {
-      const passwordInput = document.getElementById('password2');
-      const icon = document.querySelector('.toggle-password2');
-  
-      if (passwordInput.type === 'password') {
-        passwordInput.type = 'text';
-        icon.classList.remove('fa-eye');
-        icon.classList.add('fa-eye-slash');
-      } else {
-        passwordInput.type = 'password';
-        icon.classList.remove('fa-eye-slash');
-        icon.classList.add('fa-eye');
-      }
-    }
+<script> 
+  // Funktionen zum Ein- und Ausblenden von Passwörtern
+  function togglePasswordVisibility1() {
+    const passwordInput = document.getElementById('password1'); 
+    const icon = document.querySelector('.toggle-password1');
 
-    function togglePasswordVisibility3() {
-        const passwordInput = document.getElementById('password3');
-        const icon = document.querySelector('.toggle-password3');
-    
-        if (passwordInput.type === 'password') {
-          passwordInput.type = 'text';
-          icon.classList.remove('fa-eye');
-          icon.classList.add('fa-eye-slash');
-        } else {
-          passwordInput.type = 'password';
-          icon.classList.remove('fa-eye-slash');
-          icon.classList.add('fa-eye');
-        }
-      }
-  </script>
-  
+    if (passwordInput.type === 'password') { 
+      passwordInput.type = 'text';
+      icon.classList.remove('fa-eye');
+      icon.classList.add('fa-eye-slash');
+    } else {
+      passwordInput.type = 'password';
+      icon.classList.remove('fa-eye-slash');
+      icon.classList.add('fa-eye');
+    }
+  }
+
+  function togglePasswordVisibility2() {
+    const passwordInput = document.getElementById('password2');
+    const icon = document.querySelector('.toggle-password2');
+
+    if (passwordInput.type === 'password') {
+      passwordInput.type = 'text';
+      icon.classList.remove('fa-eye');
+      icon.classList.add('fa-eye-slash');
+    } else {
+      passwordInput.type = 'password';
+      icon.classList.remove('fa-eye-slash');
+      icon.classList.add('fa-eye');
+    }
+  }
+
+  function togglePasswordVisibility3() {
+    const passwordInput = document.getElementById('password3');
+    const icon = document.querySelector('.toggle-password3');
+
+    if (passwordInput.type === 'password') {
+      passwordInput.type = 'text';
+      icon.classList.remove('fa-eye');
+      icon.classList.add('fa-eye-slash');
+    } else {
+      passwordInput.type = 'password';
+      icon.classList.remove('fa-eye-slash');
+      icon.classList.add('fa-eye');
+    }
+  }
+</script>
+
 {% endblock %}
