--- a/Server/Website/Diplomarbeit/website/templates/allFlagsByContinent.html
+++ b/Server/Website/Diplomarbeit/website/templates/allFlagsByContinent.html
@@ -2,6 +2,7 @@
 {% block title %}allFlags{% endblock %}
 {% block content %}
 
+<!-- Stildefinitionen für das Grid und die Flaggencontainer -->
 <style>
     #flagForm {
         display: grid;
@@ -23,14 +24,19 @@
         border: 2px solid grey;
     }
 </style>
-<h1 style="text-align: center; padding-top: 20px; padding-bottom: 30px;">All Flags of the World</h1>
 
-    <div style="width: 100%; text-align: center; padding-bottom:20px;">
-        <hr>
-            <h3>Europe</h3>
-        <hr>
-    </div>
+<!-- Überschriften für die Seite -->
+<h2 style="text-align: center; padding-top: 30px;">All Flags of the World</h2>
+<h5 style="text-align: center; color: gray; padding-bottom: 30px;">Ordered by Continents</h5>
 
+<!-- Flaggen nach Kontinenten geordnet -->
+<div style="width: 100%; text-align: center; padding-bottom:20px;">
+    <hr>
+    <h3>Europe</h3>
+    <hr>
+</div>
+
+<!-- Formular für Europäische Flaggen -->
 <form id="flagForm">
     {% for i in country_names_list[0] %}
         {% set path = '/flags/'+i+'.png' %} 
@@ -48,6 +54,7 @@
         <hr>
     </div>
 
+<!-- Formular für Asiatische Flaggen -->
 <form id="flagForm">
     {% for i in country_names_list[1] %}
         {% set path = '/flags/'+i+'.png' %} 
@@ -65,6 +72,7 @@
         <hr>
     </div>
 
+<!-- Formular für Nord Amerikanische Flaggen -->
 <form id="flagForm">
     {% for i in country_names_list[2] %}
         {% set path = '/flags/'+i+'.png' %} 
@@ -82,6 +90,7 @@
         <hr>
     </div>
 
+<!-- Formular für Süd Amerikanische Flaggen -->
 <form id="flagForm">
     {% for i in country_names_list[3] %}
         {% set path = '/flags/'+i+'.png' %} 
@@ -99,6 +108,7 @@
         <hr>
     </div>
 
+<!-- Formular für Afrikanische Flaggen -->
 <form id="flagForm">
     {% for i in country_names_list[4] %}
         {% set path = '/flags/'+i+'.png' %} 
@@ -116,6 +126,7 @@
         <hr>
     </div>
 
+<!-- Formular für Flaggen Ozianiens -->
 <form id="flagForm">
     {% for i in country_names_list[5] %}
         {% set path = '/flags/'+i+'.png' %} 
