--- a/Server/Website/Diplomarbeit/website/templates/deleteUser.html
+++ b/Server/Website/Diplomarbeit/website/templates/deleteUser.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <style>
+  /* Stildefinitionen für das Icon, das das Passwort verdeckt/zeigt */
   .field-icon {
     float: right;
     margin-left: -25px;
@@ -15,62 +16,73 @@
     cursor: pointer;
   }
 </style>
-  <form method="POST">
-    <h3 align="center">Delete User</h3>
-    <div class="form-group">
-      <label for="firstName">Username</label>
-      <div style="font-size: 14px" id="info_text"></div>
+<!-- Formular zur Änderung des Benutzernamens -->
+<form method="POST">
+  <h3 align="center">Delete User</h3>
+
+  <!-- Eingabefeld für den Benutzernamen -->
+  <div class="form-group">
+    <label for="firstName">Username</label>
+    <div style="font-size: 14px" id="info_text"></div>
+    <input
+      type="text"
+      class="form-control"
+      value="{{user_name}}"
+      color="Black"
+      disabled="true"
+    />
+  </div>
+
+  <!-- Eingabefeld für die E-Mail-Adresse -->
+  <div class="form-group">
+      <label for="password2">Email</label>
       <input
         type="text"
         class="form-control"
-        value="{{user_name}}"
-        color="Black"
+        value="{{email}}"
         disabled="true"
       />
-    </div>
-    <div class="form-group">
-        <label for="password2">Email</label>
-        <input
-          type="text"
-          class="form-control"
-          value="{{email}}"
-          disabled="true"
-        />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password1"
-        name="password1"
-        placeholder="Password"
-      />
-      <span class="fa fa-fw fa-eye field-icon toggle-password1" onclick="togglePasswordVisibility()"></span>
-    </div>
-    <br />
-    <button type="submit" class="btn btn-primary">Delete</button>  
-  </form>
+  </div>
 
-  <script>
-    function show_text() {
-      document.getElementById("info_text").innerText = "The previous Username has been: {{user_name}}";
-    }    
-  
-    function togglePasswordVisibility() {
-      const passwordInput = document.getElementById('password1'); 
-      const icon = document.querySelector('.toggle-password1');
-  
-      if (passwordInput.type === 'password') { 
-        passwordInput.type = 'text';
-        icon.classList.remove('fa-eye');
-        icon.classList.add('fa-eye-slash');
-      } else {
-        passwordInput.type = 'password';
-        icon.classList.remove('fa-eye-slash');
-        icon.classList.add('fa-eye');
-      }
-    }
-  </script>
-  
+  <!-- Eingabefeld für das Passwort -->
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="password1"
+      name="password1"
+      placeholder="Password"
+    />
+    <!-- Schaltfläche zum Ein- und Ausblenden des Passworts -->
+    <span class="fa fa-fw fa-eye field-icon toggle-password1" onclick="togglePasswordVisibility()"></span>
+  </div>
+  <br />
+
+  <!-- Schaltfläche zum Löschen des Benutzers -->
+  <button type="submit" class="btn btn-primary">Delete</button>  
+</form>
+
+<script>
+// Funktion zum Anzeigen des vorherigen Benutzernamens
+function show_text() {
+  document.getElementById("info_text").innerText = "The previous Username has been: {{user_name}}";
+}    
+
+// Funktion zum Ein- und Ausblenden des Passworts
+function togglePasswordVisibility() {
+  const passwordInput = document.getElementById('password1'); 
+  const icon = document.querySelector('.toggle-password1');
+
+  if (passwordInput.type === 'password') { 
+    passwordInput.type = 'text';
+    icon.classList.remove('fa-eye');
+    icon.classList.add('fa-eye-slash');
+  } else {
+    passwordInput.type = 'password';
+    icon.classList.remove('fa-eye-slash');
+    icon.classList.add('fa-eye');
+  }
+}
+</script>
 {% endblock %}
