--- a/Server/Website/Diplomarbeit/website/templates/flagNameQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/flagNameQuiz.html
@@ -2,9 +2,20 @@
 {% block title %}Flag Quiz{% endblock %}
 {% block content %}
 
+
 <style>
+    
+    /* Stildefinitionen für das Eingabefeld */
+    .input-container{
+        margin-left: 25px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        gap: 20px;
+    }
+
+    /* Stildefinitionen für Bilder und Nachrichten */
     .image-container,
-    .input-container,
     .message-container {
         margin-left: 20px;
         display: grid;
@@ -13,53 +24,114 @@
         gap: 20px;
     }
 
+    /* Stildefinitionen für Eingabefelder */
     input {
-        padding: 10px;
+        width: 250px;
+        color: rgb(36, 35, 42);
         font-size: 16px;
-        border: 2px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-        width: 100%;
+        line-height: 20px;
+        min-height: 28px;
+        border-radius: 2px;
+        padding: 8px 16px;
+        margin-top: 5px;
+        border: 2px solid transparent;
+        box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
+        background: rgb(251, 251, 251);
+        transition: all 0.1s ease 0s;
+        :focus{
+            border: 2px solid rgb(124, 138, 255);
+        }
     }
 
     .error {
         border-color: red;
     }
 
+    .button-81 {
+        background-color: #fff;
+        border: 0 solid #e2e8f0;
+        border-radius: 1.5rem;
+        box-sizing: border-box;
+        color: #0d172a;
+        cursor: pointer;
+        display: inline-block;
+        font-family: "Basier circle",-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        font-size: 1.1rem;
+        font-weight: 600;
+        line-height: 1;
+        padding: 1rem 1.6rem;
+        text-align: center;
+        text-decoration: none #0d172a solid;
+        text-decoration-thickness: auto;
+        transition: all .1s cubic-bezier(.4, 0, .2, 1);
+        box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        }
+    
+        .button-81:hover {
+        background-color: #1e293b;
+        color: #fff;
+        }
+    
+        @media (min-width: 768px) {
+        .button-81 {
+            font-size: 1.125rem;
+            padding: 1rem 2rem;
+        }
+        }
+    
+        .button-81:disabled {
+            background-color: #d3d3d3;
+            color: #a0aec0;
+            cursor: not-allowed; 
+        }
+        
+        .button-81:hover:disabled {
+            background-color: #d3d3d3; 
+        }
+        
+
 
 </style> 
 
 {% set laender = [land1, land2, land3, land4] %}
-<h1 style="text-align: center"> {{ quiz_name }} </h1>
-<h3 style="text-align: center">{{ discription }}</h3>
+<h2 style="text-align: center; margin-top: 20px"> {{ quiz_name }} </h2>
+<h4 style="text-align: center">{{ discription }}</h4>
 <p style="color: grey; text-align: center;"> Please fill out all fields!</p>
 
+<!-- Container für die Anzeige der Bilder -->
 <div class="image-container">
     {% for i in laender %}
         <div style="padding-top: 20px; text-align: center;">
-            <img src="{{ url_for('static', filename=i) }}" width="250" height="140" style="border: 2px solid grey;">
+            <!-- Anzeige der Bilder für die Länder -->
+            <img src="{{ url_for('static', filename=i) }}" width="250" height="140" style="border: 1px solid black; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);">
         </div>
     {% endfor %}
 </div>
 
+<!-- Container für die Eingabefelder -->
 <div class="input-container">
     <input type="text" id="input0">
     <input type="text" id="input1">
     <input type="text" id="input2">
     <input type="text" id="input3">
+    <button class="button-81" onclick="buttonClick()" style="with:100px">check</button> 
+    <span style="margin-left: 97%; font-size: 21px">{{session["quiz_count"]}}/5</span>
 </div>
 
+<!-- Container für die Anzeige von Nachrichten -->
 <div class="message-container">
+    <!-- Versteckte Nachrichten für jede Antwort -->
     <p id="resultMessage0" style="display: none;">The right Answer would have been <b>{{land_names[0]}}</b></p>
     <p id="resultMessage1" style="display: none;">The right Answer would have been <b>{{land_names[1]}}</b></p>
     <p id="resultMessage2" style="display: none;">The right Answer would have been <b>{{land_names[2]}}</b></p>
     <p id="resultMessage3" style="display: none;">The right Answer would have been <b>{{land_names[3]}}</b></p>
 </div>
 
-<button onclick="buttonClick()">check</button>
-
 <script>
-    // Konvertiere land_names in eine JavaScript-Liste
+    // JavaScript-Code für die Überprüfung der Benutzereingaben
     var landNames = [
         "{{land_names[0]}}",
         "{{land_names[1]}}",
@@ -76,7 +148,6 @@
         var answer = landNames[i];
         var input = inputElement.value;
     
-        // Setze "xxx" als Standardwert, wenn das Input-Feld leer ist
         var selectedAnswer = input.trim() === "" ? "xxx" : input.toLowerCase();
     
         var correct_answer = answer.toLowerCase();
