--- a/Server/Website/Diplomarbeit/website/templates/home.html
+++ b/Server/Website/Diplomarbeit/website/templates/home.html
@@ -1,6 +1,173 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content%}
+<style>
+    .container2 {
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+      
+      h3 {
+        font-size: 26px;
+        margin: 20px 0;
+        text-align: center;
+        small {
+          font-size: 0.5em;
+        }
+      }
+      
+      .responsive-table {
+        li {
+          border-radius: 3px;
+          padding: 25px 30px;
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 25px;
+        }
+        .table-header {
+          background-color: #95A5A6;
+          font-size: 14px;
+          text-transform: uppercase;
+          letter-spacing: 0.03em;
+        }
+        .table-row {
+          background-color: #ffffff;
+          box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+        }
+        .col-1 {
+          flex-basis: 10%;
+        }
+        .col-2 {
+          flex-basis: 40%;
+        }
+        .col-3 {
+          flex-basis: 25%;
+        }
+        .col-4 {
+          flex-basis: 25%;
+        }
+        
+        @media all and (max-width: 767px) {
+          .table-header {
+            display: none;
+          }
+          .table-row{
+            
+          }
+          li {
+            display: block;
+          }
+          .col {
+            
+            flex-basis: 100%;
+            
+          }
+          .col {
+            display: flex;
+            padding: 10px 0;
+            &:before {
+              color: #6C7A89;
+              padding-right: 10px;
+              content: attr(data-label);
+              flex-basis: 50%;
+              text-align: right;
+            }
+          }
+        }
+      }
 
-<p>{{user_name}}{{user_email}}</p>
-<p>{{data}}</p>
+      h2 {
+        text-align: center;
+        color: #007bff;
+        margin-top: 20px;
+    }
+
+    .container1 {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        margin-top: 20px;
+    }
+
+    p {
+        line-height: 1.6;
+        margin-bottom: 15px;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
+    }
+    body{
+        background-image: url('/static/premium_photo-1681488098851-e3913f3b1908.avif');
+        background-size: cover;  
+        background-position: center bottom;
+        background-repeat: no-repeat;
+    }
+
+    .seven h1 {
+            text-align: center;
+            font-size:30px; font-weight:300; color:#222;
+            text-transform: uppercase;
+            margin-top: 35px;
+            font-weight: bold;
+            
+        }
+    .container3{
+        background-color: rgba(255, 255, 255, 0.4);
+        padding: 15px;
+        border-radius: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+
+    }
+        
+        
+</style>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<div class="container3">
+    <div class="seven">
+        <h1>Earthwise</h1>
+    </div>
+    <div class="container1">
+
+        <p>
+            Earthwise is a project that aims to bring geographical knowledge closer to people around the 
+            world. In our globalizing world, we increasingly hear about events occurring worldwide. However, 
+            most people struggle to associate the mentioned countries with a geographical location or 
+            recognize their respective flags.
+        </p>
+        <p>
+            Earthwise strives to close this knowledge gap and provide people of all ages with a deeper 
+            understanding of geography. In an era of globalization where information from around the world 
+            is easily accessible, it is crucial that people not only hear about events but also have the 
+            ability to understand the geographical contexts.
+        </p>
+        <p>
+            Through interactive and innovative learning methods, Earthwise seeks to overcome this challenge. 
+            Many individuals face difficulties in locating countries on a world map or identifying their flags. 
+            Our goal is to enhance these skills in a playful and engaging manner.
+        </p>
+    </div>
+
+
+    <div class="container2">
+        <h3>Latest revieled Quizzes</h3>
+        <ul class="responsive-table">
+        <li class="table-header">
+            <div class="col col-1">Number</div>
+            <div class="col col-4">Quiz Name</div>
+            <div class="col col-3">Type</div>
+        </li>
+        {% for i in range(5) %}
+            <li class="table-row">
+                <div class="col col-1">{{ i+1 }}</div>
+                <div class="col col-4">{{ names[i] }}</div>
+                <div class="col col-3">{{ types[i] }}</div>
+            </li>
+        {% endfor %}
+
+        </ul>
+    </div>
+</div>
+
 {% endblock %}
