--- a/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
+++ b/Server/Website/Diplomarbeit/website/templates/singleFlagNameQuiz.html
@@ -2,6 +2,7 @@
 {% block title %}Single Flag Quiz{% endblock %}
 {% block content %}
 
+<!-- Stile für die Seite -->
 <style>
     .image-container {
         margin: 0px auto;
@@ -17,40 +18,53 @@
         text-align: center;
     }
 
-    .input-container {
-        margin-left: 40px;
-        padding-top: 30px;
-        padding-left: 400px;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(1, 1fr);
-        gap: 40px;
+    input{
+        width: 400px;
+        color: rgb(36, 35, 42);
+        font-size: 16px;
+        line-height: 20px;
+        min-height: 28px;
+        border-radius: 2px;
+        padding: 8px 16px;
+        margin-top: 5px;
+        border: 2px solid transparent;
+        box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
+        background: rgb(251, 251, 251);
+        transition: all 0.1s ease 0s;
+        :focus{
+            border: 2px solid rgb(124, 138, 255);
+        }
+        margin-left: 41%;
     }
     
 </style>
 
-<h1 style="text-align: center">{{quiz_name}}</h1>
-<h3 style="text-align: center">{{discription}}</h3>
+<!-- Quiz-Inhalt -->
+<h2 style="text-align: center; margin-top: 20px">{{quiz_name}}</h2>
+<h4 style="text-align: center">{{discription}}</h4>
+<p style="text-align: center; font-size: 21px">{{session["quiz_count"]}}/5</p>
 
+<!-- Container für Meldungen -->
 <div class="message-container">
     <p id="resultMessage" style="display: none;">The right Answer would have been <b>{{land_name}}</b></p>
 </div>
 
+<!-- Container für Bilder -->
 <div class="image-container">
 
     <div style="padding-top: 30px;">
-        <img src="{{ url_for('static', filename= land ) }}" width="400" height="240" style="border: 1px solid grey; text-align: center;">
+        <!-- Anzeige des Quiz-Bildes -->
+        <img src="{{ url_for('static', filename= land ) }}" width="400" height="240" style="border: 1px solid black; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);">
     </div>
 
 </div>
-<div class="input-container">
-    <input type="text" id="input" onkeydown="handleKeyDown(event)">
-</div>
 
+<!-- Eingabefeld für Benutzerantwort -->
+<input type="text" id="input" onkeydown="handleKeyDown">
 
-
-
+<!-- JavaScript-Code für die Quiz-Logik -->
 <script>
+    // Funktion zum Überprüfen der Benutzereingabe
     function checkInput() {
         var inputElement = document.getElementById('input');
         var resultMessage = document.getElementById('resultMessage');
@@ -62,6 +76,7 @@
         var correct_answer = answer.toLowerCase();
         var selectedAnswer = input.toLowerCase();
 
+        // Übermittlung der Benutzerantwort an den Server und Verarbeitung der Antwort
         fetch(`/check_answer/${selectedAnswer}`, { method: 'POST', body: new URLSearchParams({ correct_answer: correct_answer }), headers: { 'Content-Type': 'application/x-www-form-urlencoded' } })
             .then(response => response.json())
             .then(data => {
@@ -80,7 +95,7 @@
     
                 
     
-                // Anzeigen der Anzahl der richtigen Antworten statt eines Popups
+                // Anzeigen der Anzahl der richtigen Antworten 
                 var correctAnswersCountElement = document.getElementById('correctAnswersCount');
                 correctAnswersCountElement.innerHTML = `Anzahl der richtigen Antworten: ${data.correct_answers_count}`;
             })
